--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
         "guard-for-in": 0,
         "no-restricted-syntax": 0,
         "prefer-template": 0,
-        "no-unused-expressions": 0
+        "no-unused-expressions": 0,
+        "react/jsx-no-target-blank": 0,
+        "no-alert": 0
     }
 }
