--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://example.com/ruvod-test",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -19,11 +20,9 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
-    "react-github-login": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "webauthn": "^0.2.0",
-    "webauthn-simple-app": "^2.0.0"
+    "webauthn": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
