--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.19.2",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
